--- a/config.env
+++ b/config.env
@@ -7,7 +7,7 @@ WARN_COUNT = 3
 DISABLE_PM = "false"
 MODE = "public"
 ANTILINK_VALUES = "all"
-          
-
-
-
+BOT_NAME =         
+CAPTION =
+THUMB_IMAGE =
+GURL =
