--- a/config.env
+++ b/config.env
@@ -16,4 +16,4 @@ MONGODB_URI =
 ELEVENLAB_API_KEY =
 OPENAI_API_KEY =
 REMOVE_BG_KEY =
-caption = 
+caption ="『 𝗞𝗛𝗔𝗥𝗔𝗟-𝗠𝗗 』\n youtube.com/@GlobalTechInfo"
