--- a/config.env
+++ b/config.env
@@ -1,15 +1,14 @@
 OWNER_NUMBER="923051391007"
 SESSION_ID = "SESSION_85_23_59_01_kjgfgfclhj"
-THUMB_IMAGE = "https://telegra.ph/file/d5b1c3544fedc23e11a06.jpg"
+THUMB_IMAGE = "https://telegra.ph/file/da3366bb4fd252566d065.jpg"
 OWNER_NAME = "Stranger"
 PREFIX = .*!/
 WARN_COUNT = 3
 DISABLE_PM = "false"
 MODE = "public"
 ANTILINK_VALUES = "all"
-BOT_NAME =         
+BOT_NAME ="𝐆𝐋𝐎𝐁𝐀𝐋-𝐌𝐃"      
 CAPTION =
-THUMB_IMAGE =
 GURL =
 DATABASE_URL =
 MONGODB_URI =
