--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 OWNER_NUMBER="923051391007"
-SESSION_ID = "SESSION_85_23_59_01_kjgfgfclhj"
+SESSION_ID = ""
 THUMB_IMAGE = "https://telegra.ph/file/da3366bb4fd252566d065.jpg"
 OWNER_NAME = "Stranger"
 PREFIX = .*!/
@@ -7,12 +7,12 @@ WARN_COUNT = 3
 DISABLE_PM = "false"
 MODE = "public"
 ANTILINK_VALUES = "all"
-BOT_NAME ="𝐆𝐋𝐎𝐁𝐀𝐋-𝐌𝐃"      
-CAPTION =
+BOT_NAME = "𝐆𝐋𝐎𝐁𝐀𝐋-𝐌𝐃"      
+CAPTION = "𝐆𝐋𝐎𝐁𝐀𝐋-𝐌𝐃"
 GURL =
 DATABASE_URL =
 MONGODB_URI =
 ELEVENLAB_API_KEY =
 OPENAI_API_KEY =
 REMOVE_BG_KEY =
-caption ="『 𝗞𝗛𝗔𝗥𝗔𝗟-𝗠𝗗 』\n youtube.com/@GlobalTechInfo"
+caption = "『 𝗞𝗛𝗔𝗥𝗔𝗟-𝗠𝗗 』\n youtube.com/@GlobalTechInfo"
