--- a/config.env
+++ b/config.env
@@ -10,8 +10,8 @@ ANTILINK_VALUES = "all"
 BOT_NAME ="𝐆𝐋𝐎𝐁𝐀𝐋-𝐌𝐃"      
 CAPTION = "𝐆𝐋𝐎𝐁𝐀𝐋-𝐌𝐃"
 GURL =
-DATABASE_URL =postgres://koyeb-adm:kR0OM6mVATGX@ep-young-hall-a2rojz4x.eu-central-1.pg.koyeb.app/koyebdb
-MONGODB_URI =mongodb://mongo:Leua9VD8ienGyhpdruHQ@containers.railway.app:5534
+DATABASE_URL = "postgres://koyeb-adm:kR0OM6mVATGX@ep-young-hall-a2rojz4x.eu-central-1.pg.koyeb.app/koyebdb"
+MONGODB_URI = "mongodb://mongo:Leua9VD8ienGyhpdruHQ@containers.railway.app:5534"
 ELEVENLAB_API_KEY =
 OPENAI_API_KEY =
 REMOVE_BG_KEY =
